--- a/lession5_3.ipynb
+++ b/lession5_3.ipynb
@@ -102,6 +102,510 @@
     "             columns=['國文','英文','數學']\n",
     "             )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>國文</th>\n",
+       "      <th>英文</th>\n",
+       "      <th>數學</th>\n",
+       "      <th>地理</th>\n",
+       "      <th>探討</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>76</td>\n",
+       "      <td>85</td>\n",
+       "      <td>58</td>\n",
+       "      <td>50</td>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>87</td>\n",
+       "      <td>64</td>\n",
+       "      <td>62</td>\n",
+       "      <td>71</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>60</td>\n",
+       "      <td>63</td>\n",
+       "      <td>50</td>\n",
+       "      <td>66</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>77</td>\n",
+       "      <td>83</td>\n",
+       "      <td>53</td>\n",
+       "      <td>56</td>\n",
+       "      <td>87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>58</td>\n",
+       "      <td>74</td>\n",
+       "      <td>68</td>\n",
+       "      <td>79</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>99</td>\n",
+       "      <td>93</td>\n",
+       "      <td>77</td>\n",
+       "      <td>60</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>73</td>\n",
+       "      <td>79</td>\n",
+       "      <td>66</td>\n",
+       "      <td>76</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>51</td>\n",
+       "      <td>74</td>\n",
+       "      <td>77</td>\n",
+       "      <td>52</td>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>78</td>\n",
+       "      <td>58</td>\n",
+       "      <td>63</td>\n",
+       "      <td>73</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>72</td>\n",
+       "      <td>97</td>\n",
+       "      <td>93</td>\n",
+       "      <td>54</td>\n",
+       "      <td>58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>66</td>\n",
+       "      <td>85</td>\n",
+       "      <td>72</td>\n",
+       "      <td>73</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>78</td>\n",
+       "      <td>91</td>\n",
+       "      <td>99</td>\n",
+       "      <td>81</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>59</td>\n",
+       "      <td>86</td>\n",
+       "      <td>51</td>\n",
+       "      <td>65</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>97</td>\n",
+       "      <td>66</td>\n",
+       "      <td>79</td>\n",
+       "      <td>73</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>59</td>\n",
+       "      <td>99</td>\n",
+       "      <td>94</td>\n",
+       "      <td>89</td>\n",
+       "      <td>66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>75</td>\n",
+       "      <td>80</td>\n",
+       "      <td>55</td>\n",
+       "      <td>81</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>54</td>\n",
+       "      <td>84</td>\n",
+       "      <td>99</td>\n",
+       "      <td>74</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>58</td>\n",
+       "      <td>96</td>\n",
+       "      <td>72</td>\n",
+       "      <td>85</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>95</td>\n",
+       "      <td>98</td>\n",
+       "      <td>65</td>\n",
+       "      <td>96</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>62</td>\n",
+       "      <td>57</td>\n",
+       "      <td>86</td>\n",
+       "      <td>57</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>98</td>\n",
+       "      <td>55</td>\n",
+       "      <td>71</td>\n",
+       "      <td>66</td>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>82</td>\n",
+       "      <td>69</td>\n",
+       "      <td>57</td>\n",
+       "      <td>97</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>84</td>\n",
+       "      <td>99</td>\n",
+       "      <td>98</td>\n",
+       "      <td>71</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>52</td>\n",
+       "      <td>64</td>\n",
+       "      <td>98</td>\n",
+       "      <td>64</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>53</td>\n",
+       "      <td>85</td>\n",
+       "      <td>60</td>\n",
+       "      <td>94</td>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>55</td>\n",
+       "      <td>85</td>\n",
+       "      <td>100</td>\n",
+       "      <td>52</td>\n",
+       "      <td>56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>53</td>\n",
+       "      <td>98</td>\n",
+       "      <td>80</td>\n",
+       "      <td>74</td>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>70</td>\n",
+       "      <td>72</td>\n",
+       "      <td>93</td>\n",
+       "      <td>83</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>88</td>\n",
+       "      <td>69</td>\n",
+       "      <td>65</td>\n",
+       "      <td>69</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>100</td>\n",
+       "      <td>73</td>\n",
+       "      <td>82</td>\n",
+       "      <td>87</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>68</td>\n",
+       "      <td>54</td>\n",
+       "      <td>81</td>\n",
+       "      <td>99</td>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>74</td>\n",
+       "      <td>50</td>\n",
+       "      <td>96</td>\n",
+       "      <td>69</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>99</td>\n",
+       "      <td>61</td>\n",
+       "      <td>68</td>\n",
+       "      <td>60</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>80</td>\n",
+       "      <td>54</td>\n",
+       "      <td>91</td>\n",
+       "      <td>71</td>\n",
+       "      <td>79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>75</td>\n",
+       "      <td>67</td>\n",
+       "      <td>75</td>\n",
+       "      <td>64</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>84</td>\n",
+       "      <td>66</td>\n",
+       "      <td>65</td>\n",
+       "      <td>64</td>\n",
+       "      <td>81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>80</td>\n",
+       "      <td>87</td>\n",
+       "      <td>64</td>\n",
+       "      <td>66</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>67</td>\n",
+       "      <td>100</td>\n",
+       "      <td>51</td>\n",
+       "      <td>97</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>59</td>\n",
+       "      <td>91</td>\n",
+       "      <td>55</td>\n",
+       "      <td>53</td>\n",
+       "      <td>56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>93</td>\n",
+       "      <td>96</td>\n",
+       "      <td>68</td>\n",
+       "      <td>83</td>\n",
+       "      <td>82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>80</td>\n",
+       "      <td>96</td>\n",
+       "      <td>89</td>\n",
+       "      <td>79</td>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>86</td>\n",
+       "      <td>88</td>\n",
+       "      <td>82</td>\n",
+       "      <td>61</td>\n",
+       "      <td>82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>57</td>\n",
+       "      <td>68</td>\n",
+       "      <td>80</td>\n",
+       "      <td>71</td>\n",
+       "      <td>89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>98</td>\n",
+       "      <td>63</td>\n",
+       "      <td>87</td>\n",
+       "      <td>50</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>81</td>\n",
+       "      <td>79</td>\n",
+       "      <td>99</td>\n",
+       "      <td>85</td>\n",
+       "      <td>98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>100</td>\n",
+       "      <td>95</td>\n",
+       "      <td>99</td>\n",
+       "      <td>52</td>\n",
+       "      <td>59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>88</td>\n",
+       "      <td>55</td>\n",
+       "      <td>79</td>\n",
+       "      <td>91</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>98</td>\n",
+       "      <td>52</td>\n",
+       "      <td>51</td>\n",
+       "      <td>66</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>100</td>\n",
+       "      <td>81</td>\n",
+       "      <td>81</td>\n",
+       "      <td>58</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>71</td>\n",
+       "      <td>97</td>\n",
+       "      <td>59</td>\n",
+       "      <td>58</td>\n",
+       "      <td>72</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     國文   英文   數學  地理   探討\n",
+       "0    76   85   58  50   95\n",
+       "1    87   64   62  71   52\n",
+       "2    60   63   50  66   65\n",
+       "3    77   83   53  56   87\n",
+       "4    58   74   68  79   99\n",
+       "5    99   93   77  60   84\n",
+       "6    73   79   66  76   60\n",
+       "7    51   74   77  52   91\n",
+       "8    78   58   63  73  100\n",
+       "9    72   97   93  54   58\n",
+       "10   66   85   72  73   90\n",
+       "11   78   91   99  81   80\n",
+       "12   59   86   51  65   84\n",
+       "13   97   66   79  73   63\n",
+       "14   59   99   94  89   66\n",
+       "15   75   80   55  81   61\n",
+       "16   54   84   99  74   76\n",
+       "17   58   96   72  85   60\n",
+       "18   95   98   65  96   60\n",
+       "19   62   57   86  57   96\n",
+       "20   98   55   71  66   68\n",
+       "21   82   69   57  97   80\n",
+       "22   84   99   98  71   70\n",
+       "23   52   64   98  64   96\n",
+       "24   53   85   60  94   68\n",
+       "25   55   85  100  52   56\n",
+       "26   53   98   80  74   68\n",
+       "27   70   72   93  83   62\n",
+       "28   88   69   65  69   70\n",
+       "29  100   73   82  87   61\n",
+       "30   68   54   81  99   68\n",
+       "31   74   50   96  69   60\n",
+       "32   99   61   68  60   84\n",
+       "33   80   54   91  71   79\n",
+       "34   75   67   75  64   80\n",
+       "35   84   66   65  64   81\n",
+       "36   80   87   64  66   57\n",
+       "37   67  100   51  97   78\n",
+       "38   59   91   55  53   56\n",
+       "39   93   96   68  83   82\n",
+       "40   80   96   89  79   91\n",
+       "41   86   88   82  61   82\n",
+       "42   57   68   80  71   89\n",
+       "43   98   63   87  50   75\n",
+       "44   81   79   99  85   98\n",
+       "45  100   95   99  52   59\n",
+       "46   88   55   79  91   73\n",
+       "47   98   52   51  66   99\n",
+       "48  100   81   81  58   88\n",
+       "49   71   97   59  58   72"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = np.random.randint(50,high=101,size=(50, 5))\n",
+    "students = pd.DataFrame(data,\n",
+    "             columns=['國文','英文','數學','地理','探討'])\n",
+    "students"
+   ]
   }
  ],
  "metadata": {
