--- a/lession5_5.ipynb
+++ b/lession5_5.ipynb
@@ -41,7 +41,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -65,131 +77,65 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>sno</th>\n",
        "      <th>sna</th>\n",
        "      <th>sarea</th>\n",
        "      <th>mday</th>\n",
        "      <th>ar</th>\n",
-       "      <th>sareaen</th>\n",
-       "      <th>snaen</th>\n",
-       "      <th>aren</th>\n",
-       "      <th>act</th>\n",
-       "      <th>srcUpdateTime</th>\n",
-       "      <th>updateTime</th>\n",
-       "      <th>infoTime</th>\n",
-       "      <th>infoDate</th>\n",
-       "      <th>total</th>\n",
        "      <th>available_rent_bikes</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
        "      <th>available_return_bikes</th>\n",
+       "      <th>total</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>500101001</td>\n",
        "      <td>YouBike2.0_捷運科技大樓站</td>\n",
        "      <td>大安區</td>\n",
        "      <td>2025-02-15 16:00:22</td>\n",
        "      <td>復興南路二段235號前</td>\n",
-       "      <td>Daan Dist.</td>\n",
-       "      <td>YouBike2.0_MRT Technology Bldg. Sta.</td>\n",
-       "      <td>No.235， Sec. 2， Fuxing S. Rd.</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2025-02-15 16:00:33</td>\n",
-       "      <td>2025-02-15 16:00:52</td>\n",
-       "      <td>2025-02-15 16:00:22</td>\n",
-       "      <td>2025-02-15</td>\n",
-       "      <td>28</td>\n",
        "      <td>0</td>\n",
-       "      <td>25.02605</td>\n",
-       "      <td>121.54360</td>\n",
+       "      <td>28</td>\n",
        "      <td>28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>500101002</td>\n",
        "      <td>YouBike2.0_復興南路二段273號前</td>\n",
        "      <td>大安區</td>\n",
        "      <td>2025-02-15 15:53:16</td>\n",
        "      <td>復興南路二段273號西側</td>\n",
-       "      <td>Daan Dist.</td>\n",
-       "      <td>YouBike2.0_No.273， Sec. 2， Fuxing S. Rd.</td>\n",
-       "      <td>No.273， Sec. 2， Fuxing S. Rd. (West)</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2025-02-15 16:00:33</td>\n",
-       "      <td>2025-02-15 16:00:52</td>\n",
-       "      <td>2025-02-15 15:53:16</td>\n",
-       "      <td>2025-02-15</td>\n",
-       "      <td>21</td>\n",
        "      <td>0</td>\n",
-       "      <td>25.02565</td>\n",
-       "      <td>121.54357</td>\n",
+       "      <td>21</td>\n",
        "      <td>21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>500101003</td>\n",
        "      <td>YouBike2.0_國北教大實小東側門</td>\n",
        "      <td>大安區</td>\n",
        "      <td>2025-02-15 15:49:17</td>\n",
        "      <td>和平東路二段96巷7號</td>\n",
-       "      <td>Daan Dist.</td>\n",
-       "      <td>YouBike2.0_NTUE Experiment Elementary School (...</td>\n",
-       "      <td>No. 7， Ln. 96， Sec. 2， Heping E. Rd</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2025-02-15 16:00:33</td>\n",
-       "      <td>2025-02-15 16:00:52</td>\n",
-       "      <td>2025-02-15 15:49:17</td>\n",
-       "      <td>2025-02-15</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
        "      <td>16</td>\n",
-       "      <td>8</td>\n",
-       "      <td>25.02429</td>\n",
-       "      <td>121.54124</td>\n",
-       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>500101004</td>\n",
        "      <td>YouBike2.0_和平公園東側</td>\n",
        "      <td>大安區</td>\n",
        "      <td>2025-02-15 15:55:19</td>\n",
        "      <td>和平東路二段118巷33號</td>\n",
-       "      <td>Daan Dist.</td>\n",
-       "      <td>YouBike2.0_Heping Park (East)</td>\n",
-       "      <td>No. 33， Ln. 118， Sec. 2， Heping E. Rd</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2025-02-15 16:00:33</td>\n",
-       "      <td>2025-02-15 16:00:52</td>\n",
-       "      <td>2025-02-15 15:55:19</td>\n",
-       "      <td>2025-02-15</td>\n",
-       "      <td>11</td>\n",
        "      <td>2</td>\n",
-       "      <td>25.02351</td>\n",
-       "      <td>121.54282</td>\n",
        "      <td>9</td>\n",
+       "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>500101005</td>\n",
        "      <td>YouBike2.0_辛亥復興路口西北側</td>\n",
        "      <td>大安區</td>\n",
        "      <td>2025-02-15 15:58:21</td>\n",
        "      <td>復興南路二段368號</td>\n",
-       "      <td>Daan Dist.</td>\n",
-       "      <td>YouBike2.0_Xinhai Fuxing Rd. Intersection (Nor...</td>\n",
-       "      <td>No. 368， Sec. 2， Fuxing S. Rd.</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2025-02-15 16:00:33</td>\n",
-       "      <td>2025-02-15 16:00:52</td>\n",
-       "      <td>2025-02-15 15:58:21</td>\n",
-       "      <td>2025-02-15</td>\n",
-       "      <td>16</td>\n",
        "      <td>4</td>\n",
-       "      <td>25.02153</td>\n",
-       "      <td>121.54299</td>\n",
        "      <td>12</td>\n",
+       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -200,211 +146,93 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1523</th>\n",
-       "      <td>500119093</td>\n",
        "      <td>YouBike2.0_臺大禮賢樓西側</td>\n",
        "      <td>臺大公館校區</td>\n",
        "      <td>2025-02-15 15:04:18</td>\n",
        "      <td>臺大禮賢樓西側空地</td>\n",
-       "      <td>NTU Dist</td>\n",
-       "      <td>YouBike2.0_NTU LIxian Hall (West)</td>\n",
-       "      <td>NTU LIxian Hall (West)</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2025-02-15 16:00:33</td>\n",
-       "      <td>2025-02-15 16:00:52</td>\n",
-       "      <td>2025-02-15 15:04:18</td>\n",
-       "      <td>2025-02-15</td>\n",
+       "      <td>18</td>\n",
+       "      <td>18</td>\n",
        "      <td>36</td>\n",
-       "      <td>18</td>\n",
-       "      <td>25.01467</td>\n",
-       "      <td>121.53765</td>\n",
-       "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1524</th>\n",
-       "      <td>500119094</td>\n",
        "      <td>YouBike2.0_臺大大一女餐廳廣場</td>\n",
        "      <td>臺大公館校區</td>\n",
        "      <td>2025-02-15 15:59:18</td>\n",
        "      <td>臺大大一女餐廳廣場後方</td>\n",
-       "      <td>NTU Dist</td>\n",
-       "      <td>YouBike2.0_NTU Freshman Women's Dorm Restaurant</td>\n",
-       "      <td>NTU Freshman Women's Dorm Restaurant</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2025-02-15 16:00:33</td>\n",
-       "      <td>2025-02-15 16:00:52</td>\n",
-       "      <td>2025-02-15 15:59:18</td>\n",
-       "      <td>2025-02-15</td>\n",
-       "      <td>40</td>\n",
        "      <td>19</td>\n",
-       "      <td>25.01479</td>\n",
-       "      <td>121.53494</td>\n",
        "      <td>5</td>\n",
+       "      <td>40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1525</th>\n",
-       "      <td>500119095</td>\n",
        "      <td>YouBike2.0_臺大學新館</td>\n",
        "      <td>臺大公館校區</td>\n",
        "      <td>2025-02-15 15:56:18</td>\n",
        "      <td>臺大學新館旁</td>\n",
-       "      <td>NTU Dist</td>\n",
-       "      <td>YouBike2.0_NTU MK Innovation Hall</td>\n",
-       "      <td>NTU MK Innovation Hall</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2025-02-15 16:00:33</td>\n",
-       "      <td>2025-02-15 16:00:52</td>\n",
-       "      <td>2025-02-15 15:56:18</td>\n",
-       "      <td>2025-02-15</td>\n",
-       "      <td>33</td>\n",
        "      <td>5</td>\n",
-       "      <td>25.01944</td>\n",
-       "      <td>121.54339</td>\n",
        "      <td>28</td>\n",
+       "      <td>33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1526</th>\n",
-       "      <td>500119096</td>\n",
        "      <td>YouBike2.0_臺大水源舍區C棟</td>\n",
        "      <td>臺大公館校區</td>\n",
        "      <td>2025-02-15 15:46:19</td>\n",
        "      <td>臺大水源舍區C棟西側</td>\n",
-       "      <td>NTU Dist</td>\n",
-       "      <td>YouBike2.0_NTU Shui-Yuan Dorms C</td>\n",
-       "      <td>NTU Shui-Yuan Dorms C (West)</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2025-02-15 16:00:33</td>\n",
-       "      <td>2025-02-15 16:00:52</td>\n",
-       "      <td>2025-02-15 15:46:19</td>\n",
-       "      <td>2025-02-15</td>\n",
-       "      <td>99</td>\n",
        "      <td>15</td>\n",
-       "      <td>25.01547</td>\n",
-       "      <td>121.52892</td>\n",
        "      <td>83</td>\n",
+       "      <td>99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1527</th>\n",
-       "      <td>500119097</td>\n",
        "      <td>YouBike2.0_臺大人文館</td>\n",
        "      <td>臺大公館校區</td>\n",
        "      <td>2025-02-15 15:58:21</td>\n",
        "      <td>臺大人文館東北側</td>\n",
-       "      <td>NTU Dist</td>\n",
-       "      <td>YouBike2.0_NTU The College of Liberal Arts</td>\n",
-       "      <td>NTU The College of Liberal Arts (Northeast)</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2025-02-15 16:00:33</td>\n",
-       "      <td>2025-02-15 16:00:52</td>\n",
-       "      <td>2025-02-15 15:58:21</td>\n",
-       "      <td>2025-02-15</td>\n",
-       "      <td>67</td>\n",
        "      <td>29</td>\n",
-       "      <td>25.01820</td>\n",
-       "      <td>121.53476</td>\n",
        "      <td>38</td>\n",
+       "      <td>67</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1528 rows × 18 columns</p>\n",
+       "<p>1528 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            sno                     sna   sarea                 mday  \\\n",
-       "0     500101001      YouBike2.0_捷運科技大樓站     大安區  2025-02-15 16:00:22   \n",
-       "1     500101002  YouBike2.0_復興南路二段273號前     大安區  2025-02-15 15:53:16   \n",
-       "2     500101003    YouBike2.0_國北教大實小東側門     大安區  2025-02-15 15:49:17   \n",
-       "3     500101004       YouBike2.0_和平公園東側     大安區  2025-02-15 15:55:19   \n",
-       "4     500101005    YouBike2.0_辛亥復興路口西北側     大安區  2025-02-15 15:58:21   \n",
-       "...         ...                     ...     ...                  ...   \n",
-       "1523  500119093      YouBike2.0_臺大禮賢樓西側  臺大公館校區  2025-02-15 15:04:18   \n",
-       "1524  500119094    YouBike2.0_臺大大一女餐廳廣場  臺大公館校區  2025-02-15 15:59:18   \n",
-       "1525  500119095        YouBike2.0_臺大學新館  臺大公館校區  2025-02-15 15:56:18   \n",
-       "1526  500119096     YouBike2.0_臺大水源舍區C棟  臺大公館校區  2025-02-15 15:46:19   \n",
-       "1527  500119097        YouBike2.0_臺大人文館  臺大公館校區  2025-02-15 15:58:21   \n",
+       "                         sna   sarea                 mday             ar  \\\n",
+       "0         YouBike2.0_捷運科技大樓站     大安區  2025-02-15 16:00:22    復興南路二段235號前   \n",
+       "1     YouBike2.0_復興南路二段273號前     大安區  2025-02-15 15:53:16   復興南路二段273號西側   \n",
+       "2       YouBike2.0_國北教大實小東側門     大安區  2025-02-15 15:49:17    和平東路二段96巷7號   \n",
+       "3          YouBike2.0_和平公園東側     大安區  2025-02-15 15:55:19  和平東路二段118巷33號   \n",
+       "4       YouBike2.0_辛亥復興路口西北側     大安區  2025-02-15 15:58:21     復興南路二段368號   \n",
+       "...                      ...     ...                  ...            ...   \n",
+       "1523      YouBike2.0_臺大禮賢樓西側  臺大公館校區  2025-02-15 15:04:18      臺大禮賢樓西側空地   \n",
+       "1524    YouBike2.0_臺大大一女餐廳廣場  臺大公館校區  2025-02-15 15:59:18    臺大大一女餐廳廣場後方   \n",
+       "1525        YouBike2.0_臺大學新館  臺大公館校區  2025-02-15 15:56:18         臺大學新館旁   \n",
+       "1526     YouBike2.0_臺大水源舍區C棟  臺大公館校區  2025-02-15 15:46:19     臺大水源舍區C棟西側   \n",
+       "1527        YouBike2.0_臺大人文館  臺大公館校區  2025-02-15 15:58:21       臺大人文館東北側   \n",
        "\n",
-       "                 ar     sareaen  \\\n",
-       "0       復興南路二段235號前  Daan Dist.   \n",
-       "1      復興南路二段273號西側  Daan Dist.   \n",
-       "2       和平東路二段96巷7號  Daan Dist.   \n",
-       "3     和平東路二段118巷33號  Daan Dist.   \n",
-       "4        復興南路二段368號  Daan Dist.   \n",
-       "...             ...         ...   \n",
-       "1523      臺大禮賢樓西側空地    NTU Dist   \n",
-       "1524    臺大大一女餐廳廣場後方    NTU Dist   \n",
-       "1525         臺大學新館旁    NTU Dist   \n",
-       "1526     臺大水源舍區C棟西側    NTU Dist   \n",
-       "1527       臺大人文館東北側    NTU Dist   \n",
+       "      available_rent_bikes  available_return_bikes  total  \n",
+       "0                        0                      28     28  \n",
+       "1                        0                      21     21  \n",
+       "2                        8                       8     16  \n",
+       "3                        2                       9     11  \n",
+       "4                        4                      12     16  \n",
+       "...                    ...                     ...    ...  \n",
+       "1523                    18                      18     36  \n",
+       "1524                    19                       5     40  \n",
+       "1525                     5                      28     33  \n",
+       "1526                    15                      83     99  \n",
+       "1527                    29                      38     67  \n",
        "\n",
-       "                                                  snaen  \\\n",
-       "0                  YouBike2.0_MRT Technology Bldg. Sta.   \n",
-       "1              YouBike2.0_No.273， Sec. 2， Fuxing S. Rd.   \n",
-       "2     YouBike2.0_NTUE Experiment Elementary School (...   \n",
-       "3                         YouBike2.0_Heping Park (East)   \n",
-       "4     YouBike2.0_Xinhai Fuxing Rd. Intersection (Nor...   \n",
-       "...                                                 ...   \n",
-       "1523                  YouBike2.0_NTU LIxian Hall (West)   \n",
-       "1524    YouBike2.0_NTU Freshman Women's Dorm Restaurant   \n",
-       "1525                  YouBike2.0_NTU MK Innovation Hall   \n",
-       "1526                   YouBike2.0_NTU Shui-Yuan Dorms C   \n",
-       "1527         YouBike2.0_NTU The College of Liberal Arts   \n",
-       "\n",
-       "                                             aren act        srcUpdateTime  \\\n",
-       "0                   No.235， Sec. 2， Fuxing S. Rd.   1  2025-02-15 16:00:33   \n",
-       "1            No.273， Sec. 2， Fuxing S. Rd. (West)   1  2025-02-15 16:00:33   \n",
-       "2             No. 7， Ln. 96， Sec. 2， Heping E. Rd   1  2025-02-15 16:00:33   \n",
-       "3           No. 33， Ln. 118， Sec. 2， Heping E. Rd   1  2025-02-15 16:00:33   \n",
-       "4                  No. 368， Sec. 2， Fuxing S. Rd.   1  2025-02-15 16:00:33   \n",
-       "...                                           ...  ..                  ...   \n",
-       "1523                       NTU LIxian Hall (West)   1  2025-02-15 16:00:33   \n",
-       "1524         NTU Freshman Women's Dorm Restaurant   1  2025-02-15 16:00:33   \n",
-       "1525                       NTU MK Innovation Hall   1  2025-02-15 16:00:33   \n",
-       "1526                 NTU Shui-Yuan Dorms C (West)   1  2025-02-15 16:00:33   \n",
-       "1527  NTU The College of Liberal Arts (Northeast)   1  2025-02-15 16:00:33   \n",
-       "\n",
-       "               updateTime             infoTime    infoDate  total  \\\n",
-       "0     2025-02-15 16:00:52  2025-02-15 16:00:22  2025-02-15     28   \n",
-       "1     2025-02-15 16:00:52  2025-02-15 15:53:16  2025-02-15     21   \n",
-       "2     2025-02-15 16:00:52  2025-02-15 15:49:17  2025-02-15     16   \n",
-       "3     2025-02-15 16:00:52  2025-02-15 15:55:19  2025-02-15     11   \n",
-       "4     2025-02-15 16:00:52  2025-02-15 15:58:21  2025-02-15     16   \n",
-       "...                   ...                  ...         ...    ...   \n",
-       "1523  2025-02-15 16:00:52  2025-02-15 15:04:18  2025-02-15     36   \n",
-       "1524  2025-02-15 16:00:52  2025-02-15 15:59:18  2025-02-15     40   \n",
-       "1525  2025-02-15 16:00:52  2025-02-15 15:56:18  2025-02-15     33   \n",
-       "1526  2025-02-15 16:00:52  2025-02-15 15:46:19  2025-02-15     99   \n",
-       "1527  2025-02-15 16:00:52  2025-02-15 15:58:21  2025-02-15     67   \n",
-       "\n",
-       "      available_rent_bikes  latitude  longitude  available_return_bikes  \n",
-       "0                        0  25.02605  121.54360                      28  \n",
-       "1                        0  25.02565  121.54357                      21  \n",
-       "2                        8  25.02429  121.54124                       8  \n",
-       "3                        2  25.02351  121.54282                       9  \n",
-       "4                        4  25.02153  121.54299                      12  \n",
-       "...                    ...       ...        ...                     ...  \n",
-       "1523                    18  25.01467  121.53765                      18  \n",
-       "1524                    19  25.01479  121.53494                       5  \n",
-       "1525                     5  25.01944  121.54339                      28  \n",
-       "1526                    15  25.01547  121.52892                      83  \n",
-       "1527                    29  25.01820  121.53476                      38  \n",
-       "\n",
-       "[1528 rows x 18 columns]"
+       "[1528 rows x 7 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +241,7 @@
     "import pandas as pd\n",
     "\n",
     "df = pd.DataFrame(data)\n",
-    "df\n"
+    "df[[\"sna\",'sarea','mday','ar','available_rent_bikes','available_return_bikes','total']]"
    ]
   }
  ],
